layout issue fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,4 @@
 .container {
     display: grid;
     grid-template-columns: 250px 1fr;
-    height: 97vh;
 }
