--- a/src/app/components/side-navbar/side-navbar.component.scss
+++ b/src/app/components/side-navbar/side-navbar.component.scss
@@ -1,10 +1,14 @@
 @import 'src/_variables.scss';
 
 .side-nav-container {
-    height: 100%;
     background-color: $primary-blue;
     padding: 10px 0px;
     color: $color-border;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    overflow: auto;
+    width: 250px;
 }
 
 .user-profile {
